# networking-onos

./: .coveragerc  .gitignore  .gitreview  .mailmap  .testr.conf  CONTRIBUTING.rst  HACKING.rst  PKG-INFO  README.rst  TESTING.rst  lower-constraints.txt  openstack-common.conf  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
devstack/: README.rst  devstackgaterc  entry_points  functions  local.conf.SONA.example.control_only  local.conf.example  override-defaults  plugin.sh  post_test_hook.sh  pre_test_hook.sh  settings  settings.onos
devstack/onos-releases/: emu  falcon  master  master-jetty.xml
doc/source/: conf.py  index.rst  installation.rst  usage.rst
doc/source/devref/: contribute.rst  development.environment.rst  flowclassifier_driver.rst  index.rst  l3_plugin.rst  ml2_plugin.rst  sfc_driver.rst  usage.rst
doc/source/specs/: index.rst  sfc_driver.rst
etc/: conf_onos.ini  ml2_conf_onos.ini
etc/neutron/plugins/ml2/: ml2_conf_onos.ini
networking_onos/: __init__.py  _i18n.py  version.py
networking_onos/common/: config.py  utils.py
networking_onos/extensions/: callback.py  constant.py  securitygroup.py
networking_onos/plugins/l3/: README  driver.py  floating_ip.py  router.py
networking_onos/plugins/ml2/: README  README.onos  driver.py  mech_driver.py
networking_onos/releasenotes/source/: conf.py  index.rst
networking_onos/services/flowclassifier/: README  driver.py
networking_onos/services/sfc/: README  driver.py
networking_onos/tests/unit/: test_networking_onos.py
networking_onos/tests/unit/extensions/: test_driver.py
networking_onos/tests/unit/plugins/l3/: test_driver.py
networking_onos/tests/unit/plugins/ml2/: test_driver.py
networking_onos/tests/unit/services/flowclassifier/: test_driver.py
networking_onos/tests/unit/services/sfc/: test_driver.py
neutron/plugins/ml2/drivers/: README.onos  mechanism_onos.py
neutron/tests/unit/ml2/: test_mechanism_onos.py
package/debian/: changelog  control  copyright  rules
package/rpm/: networking-onos.spec  rpm-packaging.sh
rally-jobs/: README.rst
releasenotes/source/: conf.py  index.rst
releasenotes/source/locale/fr/LC_MESSAGES/: releasenotes.po
tools/: ostestr_compat_shim.sh  tox_install.sh  tox_install_project.sh
