[metadata]
name = networking-onos
summary = OpenStack Networking
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    networking_onos

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = networking_onos/locale/networking-onos.pot

[compile_catalog]
directory = networking_onos/locale
domain = networking-onos

[update_catalog]
domain = networking-onos
output_dir = networking_onos/locale
input_file = networking_onos/locale/networking-onos.pot

[wheel]
universal = 1
