[metadata]
name = networking-onos
summary = OpenStack Networking
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://docs.openstack.org/developer/networking-onos/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    networking_onos
data_files =
    etc/neutron =
        etc/neutron/plugins/ml2/ml2_conf_onos.ini

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
# Allowed configuration settings:
#
# [ml2]
# mechanism_drivers = onos_ml2
#
# [DEFAULT]
# service_plugins = onos_router
neutron.ml2.mechanism_drivers =
    onos_ml2 = networking_onos.plugins.ml2.driver:ONOSMechanismDriver
neutron.service_plugins =
    onos_router = networking_onos.plugins.l3.driver:ONOSL3Plugin
oslo.config.opts =
    onos = networking_onos.common.config:list_opts
networking_sfc.sfc.drivers =
    onos = networking_onos.services.sfc.driver:OnosSfcDriver
networking_sfc.flowclassifier.drivers =
    onos = networking_onos.services.flowclassifier.driver:OnosFlowClassifierDriver

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[upload_sphinx]
upload-dir = doc/build/html

[build_releasenotes]
build-dir = releasenotes/build
source-dir = releasenotes/source
all_files = 1

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = networking_onos/locale/networking-onos.pot

[compile_catalog]
directory = networking_onos/locale
domain = networking-onos

[update_catalog]
domain = networking-onos
output_dir = networking_onos/locale
input_file = networking_onos/locale/networking-onos.pot

[wheel]
universal = 1
